--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ body {
   font-family: 'Neue Machina-Regular';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #1d1d1d; 
+  background-color: #181818; 
 }
 
 code {
